updated function description and removed blank lines

--- a/NYC CitiBike/NYC_Bikeshare.ipynb
+++ b/NYC CitiBike/NYC_Bikeshare.ipynb
@@ -313,7 +313,7 @@
     "    station_clustering: DataFrame. Indexed by station id, column clust shows which cluster this station belongs to.\n",
     "    station_hourly_cnt_stacked: DataFrame. Indexed by station id, columns are hours of day, values are trip counts.\n",
     "    codebook: ndarray. The centroid of the clustering, returned from kmeans\n",
-    "    station_max: \n",
+    "    station_max: DataFrame. Indexed by station id, column is the maximum count for the corresponding station.\n",
     "    \"\"\"\n",
     "    if wday==True:\n",
     "        sub_df = df[df.dayofweek<5]\n",
@@ -877,37 +877,6 @@
     "- Non-subscribers' weekday pattern is similar to weekends.\n",
     "- Non-subscribers have more activities during weekends than during the week."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 336,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "wday_clustering.to_csv('wday_clustering.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 338,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "wend_clustering.to_csv('wend_clustering.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
